--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,38 +1,34 @@
-@import 'font';
+@import "font";
 
 $tablet: 320px;
 
 $primarycolor: #003479;
 
 $titleColor: $primarycolor;
-$labelcolor:  $primarycolor;
-$linkcolor:  $primarycolor;
-$bgLinkPagination:  $primarycolor;
+$labelcolor: $primarycolor;
+$linkcolor: $primarycolor;
+$bgLinkPagination: $primarycolor;
 $linkpagination: #fff;
 
-$borderTable: #00A0DF;
+$borderTable: #00a0df;
 
-$bgAreas: #F4F4F4;
+$bgAreas: #f4f4f4;
 
-$searchColor: #644C79;
+$searchColor: #644c79;
 
 .main {
-  
-    //display: flex;
-    //flex-direction: column;
     .menu {
         color: $titleColor;
-        font-family:'Karbon';
+        font-family: "Karbon";
         background-color: $bgAreas;
         padding-left: 30px;
-        padding-right: 30PX;
+        padding-right: 30px;
         padding-bottom: 20px;
         padding-top: 20px;
-       
 
-      
-
-        .inputsearch, .switchSearch, .userIDSearch {
+        .inputsearch,
+        .switchSearch,
+        .userIDSearch {
             padding-bottom: 60px;
         }
 
@@ -68,9 +64,9 @@ $searchColor: #644C79;
             font-size: 20px;
             vertical-align: middle;
             cursor: pointer;
-            
+
             &.filtercompletednull {
-                background-color: $titleColor ;
+                background-color: $titleColor;
                 color: $bgAreas;
             }
         }
@@ -83,15 +79,12 @@ $searchColor: #644C79;
                 text-decoration: underline;
                 cursor: pointer;
             }
-
         }
     }
 
-    .tablesearch  {
+    .tablesearch {
         font-family: Karbon;
         background-color: $bgAreas;
-       // width: 100%;
-    
 
         .Mui-selected {
             color: $linkpagination;
@@ -105,7 +98,7 @@ $searchColor: #644C79;
         .tablecustom {
             padding-left: 30px;
             padding-right: 30px;
-           
+
             border-spacing: 0 20px;
             border-collapse: separate;
             padding-bottom: 39px;
@@ -115,48 +108,29 @@ $searchColor: #644C79;
                     font-family: Karbon-Semibold;
                     //text-align: left;
                     font-size: 20px;
-                    text-transform:uppercase;
+                    text-transform: uppercase;
                     color: $labelcolor;
                 }
             }
 
             .rowbody {
-                margin-top:20px;
+                margin-top: 20px;
                 background-color: #fff;
-               
+
                 border-collapse: collapse;
 
                 td {
                     background-color: transparent;
                     border-bottom: 2px solid $borderTable;
                     font-size: 18px;
-                  
-                    &.image, &.uid {
+
+                    &.image,
+                    &.uid {
                         text-align: center;
-                        width:15%;
+                        width: 15%;
                     }
                 }
             }
-
-           
         }
-        
-        
     }
-
 }
-
-
-
-/*@media (min-width: $tablet) {
-    .main {
-        .menu {
-           // margin-right: 60px;
-        }
-
-        .tablesearch {
-            width: 830px;
-        }
-    }
-   
-}*/
